fixing bug in pet

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+Paw_Time_API.postman_collection.json
+Paw_Time_API_Complete_Final.postman_collection.json
+Paw_Time_API_Complete_Final.postman_collection.json
